prusti-tests/tests/verify_overflow/ui/counterexamples/pure-sum-2.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/pure-sum-2.rs:15:11
   |
15 | #[ensures(sum(5) == 0)] //TODO: add ce support for pure functions in specifications
   |           ^^^^^^^^^^^
   |
note: the error originates here
  --> $DIR/pure-sum-2.rs:16:1
   |
16 | fn test1() {}
   | ^^^^^^^^^^^^^
note: counterexample for "result"
       value:   ()
  --> $DIR/pure-sum-2.rs:16:12
   |
16 | fn test1() {}
   |            ^^

error: aborting due to previous error

